...
    
    // MARK: - Lifecycle
    
    override func viewDidLoad() {
        super.viewDidLoad()
        webView.navigationDelegate = self
        webView.accessibilityIdentifier = "UnsplashWebView"
        presenter?.viewDidLoad()
        
        progressView.setProgress(0.1, animated: false)
        progressView.progressViewStyle = .bar
        
        estimatedProgessObservation = webView.observe(\.estimatedProgress, options: []) { [weak self]  _, _ in
...
