...

    
    // MARK: - Private functions
    
    private func exitButton() -> UIButton {
        let button = UIButton.systemButton(with: UIImage(named: "Exit") ?? UIImage(), target: self, action: #selector(self.didTapExitButton))
        button.accessibilityIdentifier = "logout button"
        button.tintColor = .ypRedIOS
        button.translatesAutoresizingMaskIntoConstraints = false
        NSLayoutConstraint.activate([
            button.heightAnchor.constraint(equalToConstant: 44),
            button.widthAnchor.constraint(equalToConstant: 44),
        ])
...
